jext2_remote_debug.sh: added verbose gc stats